--- a/part3-application/server/package.json
+++ b/part3-application/server/package.json
@@ -9,14 +9,17 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../client/ && npm run build && cp -r build ../server",
     "deploy": "flyctl deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",    
-    "logs:prod": "flyctl logs"
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "logs:prod": "flyctl logs",
+    "openPage": "flyctl open"
   },
   "author": "Brandon Cloutier",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
